--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -1,5 +1,5 @@
 # French internationalization file for Syllable Parser
-# Copyright (c) 2016-2018 SIL International
+# Copyright (c) 2016-2019 SIL International
 # This software is licensed under the LGPL, version 2.1 or later 
 # (http://www.gnu.org/licenses/lgpl-2.1.html) 
 program.name=Asheninka
@@ -101,13 +101,13 @@ cv.view.graphemenaturalclasses=Graphème classes naturelles
 cv.view.environments=Environnements
 
 sh.view.segmentinventory=Liste de segments
-sh.view.sonorityhierarchy=Sonority Hierarchy
-sh.view.sonorityhierarchy.up=Move Up
-sh.view.sonorityhierarchy.down=Move Down
-sh.view.words=Son. Hier. Words
-sh.view.wordspredictedvscorrect=Predicted vs Correct Son. Hier. Words
-sh.view.graphemenaturalclasses=Grapheme Natural Classes
-sh.view.environments=Environments
+sh.view.sonorityhierarchy=Hiérarchie de sonorité
+sh.view.sonorityhierarchy.up=Avancer
+sh.view.sonorityhierarchy.down=Rétrograder
+sh.view.words=Mots hiérarchie de sonorité
+sh.view.wordspredictedvscorrect=Mots hiérarchie de sonorité prédits versus corrects
+sh.view.graphemenaturalclasses=Graphème classes naturelles
+sh.view.environments=Environnements
 
 onc.view.segmentinventory=Liste de segments ONC
 onc.view.syllablepatterns=Modèles syllabiques ONC
@@ -276,8 +276,8 @@ report.words=Mots
 report.samewords=Les deux ont les mêmes mots avec les mêmes syllabes.
 report.wordswhichdiffer=Les mots suivants diffèrent entre les deux.
 report.syllabification=Syllabification
-report.shtitle=Sonority Hierarchy Approach Comparison
-report.shcomparisonof=Comparaison d\u2019approche SH entre:
+report.shtitle=Comparaison d\u2019approche hiérarchie de sonorité
+report.shcomparisonof=Comparaison d\u2019approche iérarchie de sonorité entre:
 report.shsonorityhierarchy=Hiérarchie de sonorité
 report.sameshsonorityhierarchy=Both have the same sonority hierarchy.
 report.shnaturalclasseswhichdiffer= Les classes naturelles suivantes diffèrent entre les deux.
@@ -296,6 +296,7 @@ report.tawsyllablepatterns=Analysant classes naturelles en syllabes
 report.tawcvdetails=Les détails des modèles syllabiques essayés, dans l\u2019ordre des essais, sont ici-bas. Cliquez sur le signe + pour ouvrir ce chemin. Si un modèle syllabique ne correspond pas il se trouve en {0}. Si un modèle syllabique correspond, mais ne réussit pas à s\u2019analyser correctement il se trouve en {1}. Finalement, si un modèle syllabique correspond et aboutit à une analyse réussie, il est en {2}. Notez que les analyses réussies sont toujours le dernier point dans la liste parce que l\u2019algorithme se termine après la première analyse réussie.
 report.tawgrapheme=Graphème:
 report.tawsegment=Segment:
+report.tawsuccess=Succès!
 report.tawshdetails=The details of the segment to natural class mappings and the sonority comparison between pairs of natural classes is below.  If a segment failed to map to a natural class, it is in {0}.  Otherwise it is in {2}.report.tawsuccess=Réussite!
 report.tawshrelation=Relation
 report.tawshsegment1=Segment 1
