--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -1,5 +1,5 @@
 # Spanish internationalization file for Syllable Parser
-# Copyright (c) 2016-2018 SIL International
+# Copyright (c) 2016-2019 SIL International
 # This software is licensed under the LGPL, version 2.1 or later 
 # (http://www.gnu.org/licenses/lgpl-2.1.html) 
 program.name=Asheninka
@@ -77,7 +77,7 @@ dialog.chooselanguage=Selecionar lengua:
  
 #Approaches
 approach.cv=Patrón del CV
-approach.sonorityhierarchy=Sonority Hierarchy
+approach.sonorityhierarchy=Jerarquía de sonoridad
 approach.onc=Onset-Nucleus-Coda
 approach.moraic=Moraic
 approach.nuclearprojection=Nuclear Projection
@@ -101,13 +101,13 @@ cv.view.graphemenaturalclasses=Classes Naturales de Grafemas
 cv.view.environments=Entornos
 
 sh.view.segmentinventory=Segmentos
-sh.view.sonorityhierarchy=Sonority Hierarchy
-sh.view.sonorityhierarchy.up=Move Up
-sh.view.sonorityhierarchy.down=Move Down
+sh.view.sonorityhierarchy=Jerarquía de sonoridad
+sh.view.sonorityhierarchy.up=Mover Arriba
+sh.view.sonorityhierarchy.down=Mover Abajo
 sh.view.words=Son. Hier. Words
 sh.view.wordspredictedvscorrect=Predicted vs Correct Son. Hier. Words
-sh.view.graphemenaturalclasses=Grapheme Natural Classes
-sh.view.environments=Environments
+sh.view.graphemenaturalclasses=Classes Naturales de Grafemas
+sh.view.environments=Entornos
 
 onc.view.segmentinventory=ONC Segment Inventory
 onc.view.syllablepatterns=ONC Syllable Patterns
@@ -210,7 +210,7 @@ label.results=Resultados
 label.tryaword=Prueba una palabra
 label.tryit=Intentalo
 label.wordtotry=Palabra para intentar: 
-label.sonorityhierarchy=Sonority Hierarchy
+label.sonorityhierarchy=Jerarquía de sonoridad
 label.comparesyllabifications=Comparar los resultados de sílabas entre los enfoques
 
 # file loading/saving
@@ -277,12 +277,12 @@ report.words=Palabras
 report.samewords=Ambos tienen las mismas palabras con las mismas sílabas.
 report.wordswhichdiffer=Las siguientes palabras son diferentes entre los dos.
 report.syllabification=Silabeo
-report.shtitle=Comparación del SH Approach
-report.shcomparisonof=Comparación del SH Approach entre
-report.shsonorityhierarchy=Sonority Hierarchy
-report.sameshsonorityhierarchy=Both have the same sonority hierarchy.
+report.shtitle=Comparación del enfoque de jerarquía de sonoridad
+report.shcomparisonof=Comparación del enfoque de jerarquía de sonoridad Approach entre
+report.shsonorityhierarchy=Jerarquía de sonoridad
+report.sameshsonorityhierarchy=Ambos tienen la misma jerarquía de sonoridad.
 report.shnaturalclasseswhichdiffer=Las siguientes clases naturales difieren entre los dos.
-report.shsonorityhierarchyorder=The order of the sonority hierarchy is shown below.
+report.shsonorityhierarchyorder=El orden de la jerarquía de sonoridad se muestra a continuación.
 report.syllabifications=Silabaciones
 report.samesyllabifications=Todas las palabras tienen las mismas sílabas.
 report.syllabificationswhichdiffer=Las siguientes palabras tienen diferentes sílabas.
