Fix bug in SH: initial segment not in any natural class still parses

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -278,7 +278,7 @@ report.samewords=Ambos tienen las mismas palabras con las mismas sílabas.
 report.wordswhichdiffer=Las siguientes palabras son diferentes entre los dos.
 report.syllabification=Silabeo
 report.shtitle=Comparación del enfoque de jerarquía de sonoridad
-report.shcomparisonof=Comparación del enfoque de jerarquía de sonoridad Approach entre
+report.shcomparisonof=Comparación del enfoque de jerarquía de sonoridad entre
 report.shsonorityhierarchy=Jerarquía de sonoridad
 report.sameshsonorityhierarchy=Ambos tienen la misma jerarquía de sonoridad.
 report.shnaturalclasseswhichdiffer=Las siguientes clases naturales difieren entre los dos.
