Fix bug in compare: order could change but report did not reflect it

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -280,7 +280,7 @@ report.syllabification=Silabeo
 report.shtitle=Comparación del enfoque de jerarquía de sonoridad
 report.shcomparisonof=Comparación del enfoque de jerarquía de sonoridad entre
 report.shsonorityhierarchy=Jerarquía de sonoridad
-report.sameshsonorityhierarchy=Ambos tienen la misma jerarquía de sonoridad.
+report.sameshsonorityhierarchy=Ambos tienen el mismo conjunto de clases naturales en la jerarquía de sonoridad.
 report.shnaturalclasseswhichdiffer=Las siguientes clases naturales difieren entre los dos.
 report.shsonorityhierarchyorder=El orden de la jerarquía de sonoridad se muestra a continuación.
 report.syllabifications=Silabaciones
