--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -279,7 +279,7 @@ report.syllabification=Syllabification
 report.shtitle=Comparaison d\u2019approche hiérarchie de sonorité
 report.shcomparisonof=Comparaison d\u2019approche iérarchie de sonorité entre:
 report.shsonorityhierarchy=Hiérarchie de sonorité
-report.sameshsonorityhierarchy=Both have the same sonority hierarchy.
+report.sameshsonorityhierarchy=Both have the same set of natural classes in the sonority hierarchy.
 report.shnaturalclasseswhichdiffer= Les classes naturelles suivantes diffèrent entre les deux.
 report.shsonorityhierarchyorder=The order of the sonority hierarchy is shown below.
 report.syllabifications=Syllabifications
