Fix starter file for SH

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -63,6 +63,7 @@ about.content=Un programa lingüístico para investigar sylabificación\ny proporci
 
 #File Open/Save As dialog; import/export
 file.filterdescription=Archivos del programa Asheninka
+file.new=Nuevo Proyecto
 file.plainlistimportfilterdescription=Archivos simples
 file.paratexthyphenatedwordsfilterdescription=hyphenatedWords.txt archivo del programa ParaTExt
 file.paratextexportedwordlistfilterdescription=Archivos de lista de palabras exportados del programa ParaTExt
