--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -63,6 +63,7 @@ about.content=Un logiciel linguistique pour explorer la syllabification et\npour
 
 #File Open/Save As dialog; import/export
 file.filterdescription=fichiers Asheninka
+file.new=Nouveau projet
 file.plainlistimportfilterdescription=fichiers listes simples
 file.paratexthyphenatedwordsfilterdescription=fichiers ParaTExt hyphenatedWords.txt
 file.paratextexportedwordlistfilterdescription=fichiers ParaTExt liste de mots exportés
