First pass at ONC: segment UI and get others to compile

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -105,14 +105,19 @@ sh.view.segmentinventory=Segmentos
 sh.view.sonorityhierarchy=Jerarquía de sonoridad
 sh.view.sonorityhierarchy.up=Mover Arriba
 sh.view.sonorityhierarchy.down=Mover Abajo
-sh.view.words=Son. Hier. Words
+sh.view.words=Palabras del jerarquía de sonoridad
 sh.view.wordspredictedvscorrect=Predicted vs Correct Son. Hier. Words
 sh.view.graphemenaturalclasses=Classes Naturales de Grafemas
 sh.view.environments=Entornos
 
-onc.view.segmentinventory=ONC Segment Inventory
-onc.view.syllablepatterns=ONC Syllable Patterns
-onc.view.words=ONC Words
+onc.view.segmentinventory=Segmentos
+onc.view.sonorityhierarchy=Jerarquía de sonoridad
+onc.view.sonorityhierarchy.up=Mover Arriba
+onc.view.sonorityhierarchy.down=Mover Abajo
+onc.view.words=Palabras del ONC
+onc.view.wordspredictedvscorrect=Predicted vs Correct Son. Hier. Words
+onc.view.graphemenaturalclasses=Classes Naturales de Grafemas
+onc.view.environments=Entornos
 
 #labels
 label.backupproject=Respaldar este proyecto
@@ -213,6 +218,12 @@ label.tryit=Intentalo
 label.wordtotry=Palabra para intentar: 
 label.sonorityhierarchy=Jerarquía de sonoridad
 label.comparesyllabifications=Comparar los resultados de sílabas entre los enfoques
+label.onset=Can be in onset
+label.nucleus=Can be in nucleus
+label.coda=Can be in coda
+label.onsetHeader=O
+label.nucleusHeader=N
+label.codaHeader=C
 
 # file loading/saving
 file.error=Error
