--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -110,9 +110,14 @@ sh.view.wordspredictedvscorrect=Mots hiérarchie de sonorité prédits versus corre
 sh.view.graphemenaturalclasses=Graphème classes naturelles
 sh.view.environments=Environnements
 
-onc.view.segmentinventory=Liste de segments ONC
-onc.view.syllablepatterns=Modèles syllabiques ONC
+onc.view.segmentinventory=Liste de segments
+onc.view.sonorityhierarchy=Hiérarchie de sonorité
+onc.view.sonorityhierarchy.up=Avancer
+onc.view.sonorityhierarchy.down=Rétrograder
 onc.view.words=Mots ONC
+onc.view.wordspredictedvscorrect=Mots ONC prédits versus corrects
+onc.view.graphemenaturalclasses=Graphème classes naturelles
+onc.view.environments=Environnements
 
 # labels
 label.active=Actif
@@ -212,6 +217,12 @@ label.pleasewaitcomparer=Cette opération peut durer quelques secondes ou plusieu
 label.pleasewaittaw=Cette opération peut durer quelques secondes.
 label.sonorityhierarchy=Sonority Hierarchy
 label.comparesyllabifications=Compare Syllabification Results between Approaches
+label.onset=Can be in onset
+label.nucleus=Can be in nucleus
+label.coda=Can be in coda
+label.onsetHeader=O
+label.nucleusHeader=N
+label.codaHeader=C
 
 # file loading/saving
 file.error=Erreur
