First pass at adding syllabifcation parameters to UI

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -114,6 +114,8 @@ onc.view.segmentinventory=Segmentos
 onc.view.sonorityhierarchy=Jerarquía de sonoridad
 onc.view.sonorityhierarchy.up=Mover Arriba
 onc.view.sonorityhierarchy.down=Mover Abajo
+onc.view.syllabificationparameters=Parámetros de silabeo
+onc.view.onsetprinciple=Onset Principle
 onc.view.words=Palabras del ONC
 onc.view.wordspredictedvscorrect=Predicted vs Correct Son. Hier. Words
 onc.view.graphemenaturalclasses=Classes Naturales de Grafemas
@@ -224,6 +226,11 @@ label.coda=Can be in coda
 label.onsetHeader=O
 label.nucleusHeader=N
 label.codaHeader=C
+label.codasallowed=Codas allowed
+label.onsetmaximization=Onset maximization
+label.onsetprinciple=Onset principle
+label.syllabificationparameters=Parámetros de silabeo
+label.onsetmaximization= Onset maximization
 
 # file loading/saving
 file.error=Error
@@ -259,6 +266,9 @@ tooltip.findword=Encontrar la palabra   Ctrl+F
 #Radio buttons
 radio.current=La implementación actual
 radio.choosebackup=Elija una copia de seguridad
+radio.allbutfirst=All but the first syllable must have an onset
+radio.everysyllable=Every syllable must have an onset
+radio.onsetsnotrequired=Onsets are not required
 
 # Differences reports
 report.cvtitle=Comparación del CV Approach
