--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -114,6 +114,8 @@ onc.view.segmentinventory=Liste de segments
 onc.view.sonorityhierarchy=Hiérarchie de sonorité
 onc.view.sonorityhierarchy.up=Avancer
 onc.view.sonorityhierarchy.down=Rétrograder
+onc.view.syllabificationparameters=Syllabification Parameters
+onc.view.onsetprinciple=Onset Principle
 onc.view.words=Mots ONC
 onc.view.wordspredictedvscorrect=Mots ONC prédits versus corrects
 onc.view.graphemenaturalclasses=Graphème classes naturelles
@@ -223,6 +225,12 @@ label.coda=Can be in coda
 label.onsetHeader=O
 label.nucleusHeader=N
 label.codaHeader=C
+label.codasallowed=Codas allowed
+label.onsetmaximization=Onset maximization
+label.onsetprinciple=Onset principle
+label.syllabificationparameters=Syllabification Parameters
+label.codasallowed=Codas are allowed
+label.onsetprinciple=Onset principle setting
 
 # file loading/saving
 file.error=Erreur
@@ -258,6 +266,9 @@ tooltip.findword=Trouver mot   Ctrl+F
 #Radio buttons
 radio.current=Implémentation actuel 
 radio.choosebackup=Choisir une sauvegarde
+radio.allbutfirst=All but the first syllable must have an onset
+radio.everysyllable=Every syllable must have an onset
+radio.onsetsnotrequired=Onsets are not required
 
 # Differences reports
 report.cvtitle=Comparaison d\u2019approche CV
