Make ONC Try a Word work Refactor some trace classes

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -231,6 +231,33 @@ label.onsetmaximization=Onset maximization
 label.onsetprinciple=Onset principle
 label.syllabificationparameters=Parámetros de silabeo
 label.onsetmaximization= Onset maximization
+# ONC Syllabification tracing info status messages
+label.oncstiaddedascoda=Se agregó el segmento 1 como una coda.
+label.oncstiaddedascodastartnewsyllable=Se agregó el segmento 1 como coda y comenzó una nueva sílaba.
+label.oncstiaddedasnucleus=Segmento 1 agregado como núcleo.
+label.oncstiaddedasonset=Se agregó el segmento 1 como onset.
+label.oncstiaddingfinalsyllabletoword=Agregó la última sílaba a la palabra.
+label.oncstiaddingsyllabletoword=Agregó la sílaba a la palabra.
+label.oncstiexpectednucleusnotfound=Se esperaba que el segmento 1 fuera un núcleo, pero no lo era.
+label.oncstiexpectednucleusorcodabutnotnucleusandcodasnotallowedstartnewsyllable=Se esperaba que el segmento 1 fuera un núcleo o una coda, pero no era un núcleo y, además, no se permiten las codas; así comenzó una nueva sílaba.
+label.oncstiexpectednucleusorcodabutnotnucleusandnotcodastartnewsyllable=Se esperaba que el segmento 1 fuera un núcleo o una coda, pero no era un núcleo y no era una coda; Así comenzó una nueva sílaba.
+label.oncstiexpectedonsetornucleusnotfound=Se esperaba que el segmento 1 fuera un onset o un núcleo, pero no era ninguno de los dos.
+label.oncstinaturalclassnotfoundforsegment=No encontré una clase natural para el segmento.
+label.oncstionsetrequiredbutsegmentnotanonset=Se requieren onsets pero el segmento 1 no fue un onset.
+label.oncstisegmentiscodaoronsetbutonsetmaximizationblocksascodastartnewsyllable=El segmento 1 puede ser una coda o un onset, pero la Maximización de onset lo bloquea para que no sea una coda; comenzó una nueva sílaba.
+label.oncstisegmentiscodaoronsetbutonsetsrequiredandnextnotonsetstartnewsyllable=El segmento 1 podría ser un coda o un onset, pero se requieren inicios y el segmento 2 no es un onset; comenzó una nueva sílaba.
+label.oncstisegmenttriedasonsetbutnotanonset=Se intentó el segmento 1 como un onset, pero no fue un onset.
+label.oncstisegmenttriedasonsetbutsonorityblocksitasanonset=Se intentó el segmento 1 como un onset, pero la jerarquía de sonoridad lo bloquea como un onset.
+label.oncstisuccess=Éxito.
+label.oncstiunknown=
+# ONC Syllabification ONC type
+label.onctypecoda=coda
+label.onctypecodaoronset=coda o onset
+label.onctypenucleus=núcleo
+label.onctypenucleusorcoda=núcleo o coda
+label.onctypeonset=onset
+label.onctypeonsetornucleus=onset o núcleo
+label.onctypeunknown=
 
 # file loading/saving
 file.error=Error
@@ -325,6 +352,9 @@ report.tawshsegment1=Segmento 1
 report.tawshsegment2=Segmento 2
 report.tawshmissingnc=No clase natural
 report.tawshstartssyllable=Comienza la sílaba
+report.tawoncdetails=Los detalles de las asignaciones de segmento a clase natural, la comparación de sonoridad entre pares de clases naturales y el análisis de onset / núcleo / coda se encuentran a continuación. Si un paso falló, está en {0}. De lo contrario está en {2}.
+report.tawoncstatus=Estado
+report.tawonctype=Tipo
 report.failurecolorword=rojo
 report.matchedcolorword=azul
 report.successcolorword=verde
