--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -230,6 +230,33 @@ label.codasallowed=Codas allowed
 label.onsetmaximization=Onset maximization
 label.onsetprinciple=Onset principle
 label.syllabificationparameters=Syllabification Parameters
+# ONC Syllabification tracing info status messages
+label.oncstiaddedascoda=Added segment 1 as a coda.
+label.oncstiaddedascodastartnewsyllable=Added segment 1 as a coda and started a new syllable.
+label.oncstiaddedasnucleus=Added segment 1 as a nucleus.
+label.oncstiaddedasonset=Added segment 1 as an onset.
+label.oncstiaddingfinalsyllabletoword=Added the final syllable to the word.
+label.oncstiaddingsyllabletoword=Added the syllable to the word.
+label.oncstiexpectednucleusnotfound=Expected segment 1 to be a nucleus but it was not.
+label.oncstiexpectednucleusorcodabutnotnucleusandcodasnotallowedstartnewsyllable=Expected segment 1 to be either a nucleus or a coda, but it was not a nucleus and, further, codas are not allowed; so started a new syllable.
+label.oncstiexpectednucleusorcodabutnotnucleusandnotcodastartnewsyllable=Expected segment 1 to be either a nucleus or a coda, but it was not a nucleus and was not a coda; so started a new syllable.
+label.oncstiexpectedonsetornucleusnotfound=Expected segment 1 to be either an onset or a nucleus but it was neither.
+label.oncstinaturalclassnotfoundforsegment=Did not find a natural class for the segment.
+label.oncstionsetrequiredbutsegmentnotanonset=Onsets are required but segment 1 was not an onset.
+label.oncstisegmentiscodaoronsetbutonsetmaximizationblocksascodastartnewsyllable=Segment 1 could be either a coda or an onset, but Onset Maximization blocks it from being a coda; started a new syllable.
+label.oncstisegmentiscodaoronsetbutonsetsrequiredandnextnotonsetstartnewsyllable=Segment 1 could be either a coda or an onset, but onsets are required and segment 2 is not an onset; started a new syllable.
+label.oncstisegmenttriedasonsetbutnotanonset=Tried segment 1 as an onset, but it was not an onset.
+label.oncstisegmenttriedasonsetbutsonorityblocksitasanonset=Tried segment 1 as an onset, but the sonority hierarchy blocks it as an onset.
+label.oncstisuccess=Success.
+label.oncstiunknown=
+# ONC Syllabification ONC type
+label.onctypecoda=coda
+label.onctypecodaoronset=coda or onset
+label.onctypenucleus=nucleus
+label.onctypenucleusorcoda=nucleus or coda
+label.onctypeonset=onset
+label.onctypeonsetornucleus=onset or nucleus
+label.onctypeunknown=
 
 # file loading/saving
 file.error=Error
@@ -325,6 +352,9 @@ report.tawshsegment1=Segment 1
 report.tawshsegment2=Segment 2
 report.tawshmissingnc=No Natural Class
 report.tawshstartssyllable=Starts Syllable
+report.tawoncdetails=The details of the segment to natural class mappings, the sonority comparison between pairs of natural classes, and the parsing of onset/nucleus/coda is below.  If a step failed, it is in {0}.  Otherwise it is in {2}.
+report.tawoncstatus=Status
+report.tawonctype=Type
 report.failurecolorword=red
 report.matchedcolorword=blue
 report.successcolorword=green
