Add comparison check box options to syllabification comparison

--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -219,6 +219,14 @@ label.pleasewaitcomparer=Cette opération peut durer quelques secondes ou plusieu
 label.pleasewaittaw=Cette opération peut durer quelques secondes.
 label.sonorityhierarchy=Sonority Hierarchy
 label.comparesyllabifications=Compare Syllabification Results between Approaches
+label.usecvapproach=Use CV approach
+label.useshapproach=Use SH approach
+label.useoncapproach=Use ONC approach
+label.usemoraicapproach=Use moraic approach
+label.usenpapproach=Use nuclear projection approach
+label.useotapproach=Use OT Approach
+label.comparesyllabificationserrorheader=Select at least two approaches
+label.comparesyllabificationserrorcontent=Please select at least two approaches to compare and then click on the Compare button.
 label.onset=Can be in onset
 label.nucleus=Can be in nucleus
 label.coda=Can be in coda
