--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -220,6 +220,14 @@ label.pleasewait=Please wait...
 label.pleasewaitcomparer=This process could take a few seconds or several minutes depending on how many differences there are.
 label.pleasewaittaw=This process could take a few seconds.
 label.comparesyllabifications=Compare Syllabification Results between Approaches
+label.usecvapproach=Use CV approach
+label.useshapproach=Use SH approach
+label.useoncapproach=Use ONC approach
+label.usemoraicapproach=Use moraic approach
+label.usenpapproach=Use nuclear projection approach
+label.useotapproach=Use OT Approach
+label.comparesyllabificationserrorheader=Select at least two approaches
+label.comparesyllabificationserrorcontent=Please select at least two approaches to compare and then click on the Compare button.
 label.onset=Can be in onset
 label.nucleus=Can be in nucleus
 label.coda=Can be in coda
