--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -220,6 +220,14 @@ label.tryit=Intentalo
 label.wordtotry=Palabra para intentar: 
 label.sonorityhierarchy=Jerarquía de sonoridad
 label.comparesyllabifications=Comparar los resultados de sílabas entre los enfoques
+label.usecvapproach=Use CV approach
+label.useshapproach=Use SH approach
+label.useoncapproach=Use ONC approach
+label.usemoraicapproach=Use moraic approach
+label.usenpapproach=Use nuclear projection approach
+label.useotapproach=Use OT Approach
+label.comparesyllabificationserrorheader=Select at least two approaches
+label.comparesyllabificationserrorcontent=Please select at least two approaches to compare and then click on the Compare button.
 label.onset=Can be in onset
 label.nucleus=Can be in nucleus
 label.coda=Can be in coda
