New formatting for syllabification compare Fix bug in syllabification compare preferences

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -220,14 +220,14 @@ label.tryit=Intentalo
 label.wordtotry=Palabra para intentar: 
 label.sonorityhierarchy=Jerarquía de sonoridad
 label.comparesyllabifications=Comparar los resultados de sílabas entre los enfoques
-label.usecvapproach=Use CV approach
-label.useshapproach=Use SH approach
-label.useoncapproach=Use ONC approach
-label.usemoraicapproach=Use moraic approach
-label.usenpapproach=Use nuclear projection approach
-label.useotapproach=Use OT Approach
-label.comparesyllabificationserrorheader=Select at least two approaches
-label.comparesyllabificationserrorcontent=Please select at least two approaches to compare and then click on the Compare button.
+label.usecvapproach=Usa el enfoque de CV
+label.useshapproach=Usa el enfoque SH
+label.useoncapproach=Usa el enfoque ONC
+label.usemoraicapproach=Usa el enfoque moraico
+label.usenpapproach=Usa el enfoque de proyección nuclear
+label.useotapproach=Usa el enfoque OT
+label.comparesyllabificationserrorheader=Seleccione al menos dos enfoques
+label.comparesyllabificationserrorcontent=Seleccione al menos dos enfoques para comparar y luego haga clic en el botón Comparar.
 label.onset=Can be in onset
 label.nucleus=Can be in nucleus
 label.coda=Can be in coda
@@ -344,8 +344,11 @@ report.syllabifications=Silabaciones
 report.samesyllabifications=Todas las palabras tienen las mismas sílabas.
 report.syllabificationswhichdiffer=Las siguientes palabras tienen diferentes sílabas.
 report.syllabificationstitle=Comparar enfoques de silabeo
-report.syllabificationscomparisonof=Comparación de los enfoques de CV y Sonority Hierarchy a Syllabification
+report.syllabificationscomparisonof=Comparación de los enfoques a la Sillabificación
 report.syllabificationfailed=falló
+report.cvapproachabbreviation=CV
+report.shapproachabbreviation=SH
+report.oncapproachabbreviation=ONC
 # Try a Word
 report.tawtitle=Silabación de {0}
 report.tawsegments=Analizando en segmentos
@@ -363,9 +366,9 @@ report.tawshstartssyllable=Comienza la sílaba
 report.tawoncdetails=Los detalles de las asignaciones de segmento a clase natural, la comparación de sonoridad entre pares de clases naturales y el análisis de onset / núcleo / coda se encuentran a continuación. Si un paso falló, está en {0}. De lo contrario está en {2}.
 report.tawoncstatus=Estado
 report.tawonctype=Tipo
-report.failurecolorword=rojo
-report.matchedcolorword=azul
-report.successcolorword=verde
+report.failurecolorword=red
+report.matchedcolorword=blue
+report.successcolorword=green
 
 #Environment messages
 environmentsyntaxerror.content_after_word_final_boundary=Ningún contenido debe aparecer después de un límite final de palabra (#); detectado en o alrededor de la posición {0}.
