--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -344,8 +344,11 @@ report.syllabifications=Syllabifications
 report.samesyllabifications=All the words have the same syllabifications.
 report.syllabificationswhichdiffer=The following words have different syllabifications.
 report.syllabificationstitle=Compare syllabification approaches
-report.syllabificationscomparisonof=Comparison of CV and Sonority Hierarchy approaches to Syllabification
+report.syllabificationscomparisonof=Comparison of approaches to syllabification
 report.syllabificationfailed=echec
+report.cvapproachabbreviation=CV
+report.shapproachabbreviation=SH
+report.oncapproachabbreviation=ONC
 # Try a Word
 report.tawtitle=Syllabification de {0}
 report.tawsegments=Analysant en segments
@@ -364,9 +367,9 @@ report.tawshstartssyllable=Starts Syllable
 report.tawoncdetails=The details of the segment to natural class mappings, the sonority comparison between pairs of natural classes, and the parsing of onset/nucleus/coda is below.  If a step failed, it is in {0}.  Otherwise it is in {2}.
 report.tawoncstatus=Status
 report.tawonctype=Type
-report.failurecolorword=rouge
-report.matchedcolorword=bleu
-report.successcolorword=vert
+report.failurecolorword=red
+report.matchedcolorword=blue
+report.successcolorword=green
 
 #Environment messages
 environmentsyntaxerror.content_after_word_final_boundary=Rien ne devait se présenter après la limite finale d\u2019un mot (#); détecté à ou vers la position {0}.
