First pass at ONC comparison

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -192,6 +192,7 @@ label.cvnaturalclassfailure=Fracaso: no se pudo analizar en clases naturales; en
 label.cvsyllabificationfailure=Fracaso: no se pudo analizar clases naturales en sílabas
 label.choosepredicted=Elija el que predijo silabificaciónes convertir corregir silabeo
 label.shsyllabificationfailure=Fracaso: no se pudieron analizar los segmentos en sílabas
+label.oncsyllabificationfailure=Fracaso: no se pudieron analizar los segmentos en sílabas
 # menu.syllabifywords goes at the end of the following message
 label.nopredicted=No hay silabificaciónes predichos.\nO bien no hay palabras,\ntodas las palabras no lograron silabear,\no usted necesita para invocar 
 label.wordtofind=Palabra para buscar: 
