--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -191,6 +191,9 @@ label.segmentornaturalclass=Segment ou classe naturelle
 label.segments=Segments
 label.segmentsandnaturalclasses=Seg. ou NC
 label.sethyphenationparameters=Choisir paramètres d\u2019usage de traits d\u2019union 
+label.shsyllabificationfailure=Failure: could not parse segments into syllables
+label.sonorityhierarchy=Sonority Hierarchy
+label.oncsyllabificationfailure=Failure: could not parse segments into syllables
 label.success=Succès
 label.syllabifying=Syllabisant: 
 label.syllablepatterns=Modèles de syllabes
