Finish ONC comparison

--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -352,6 +352,15 @@ report.syllabificationfailed=echec
 report.cvapproachabbreviation=CV
 report.shapproachabbreviation=SH
 report.oncapproachabbreviation=ONC
+report.onctitle=ONC Approach Comparison
+report.onccomparisonof=ONC Approach Comparison between:
+report.syllabificationparameters=Syllabification Parameters
+report.sameonsetmaximization=Onset maximization is the same.
+report.sameonsetprinciple=The onset principle is the same.
+report.samecodasallowed=Codas allowed is the same.
+report.codasalloweddiffers=Codas allowed differs.
+report.onsetmaximizationdiffers=Onset maximization differs.
+report.onsetprinciplediffers=Onset principle differs.
 # Try a Word
 report.tawtitle=Syllabification de {0}
 report.tawsegments=Analysant en segments
