--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -350,6 +350,15 @@ report.syllabificationfailed=falló
 report.cvapproachabbreviation=CV
 report.shapproachabbreviation=SH
 report.oncapproachabbreviation=ONC
+report.onctitle=Comparación del ONC Approach
+report.onccomparisonof=Comparación del ONC Approach entre
+report.syllabificationparameters=Parámetros de silabeo
+report.sameonsetmaximization=La maximización de inicio es la misma.
+report.sameonsetprinciple=El principio de inicio es el mismo.
+report.samecodasallowed=Codas permitidas son las mismas.
+report.codasalloweddiffers=Codas permitidas son diferentes.
+report.onsetmaximizationdiffers=La maximización de inicio es diferente.
+report.onsetprinciplediffers=El principio de inicio es diferente.
 # Try a Word
 report.tawtitle=Silabación de {0}
 report.tawsegments=Analizando en segmentos
