Add LingTree to ONC Words UI

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -180,6 +180,7 @@ label.exporting=Exporting:
 label.exportingcanceled=Es: Exporting canceled!
 label.syllabifying=Silabificar: 
 label.parserresult=Resultado del analizador
+label.parsertree=Diagrama de árbol
 label.untested=No probado
 label.sethyphenationparameters=Establecer Parámetros de Palabras con Guiones
 label.success=Éxito
