--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -182,6 +182,7 @@ label.orthographicform=Graphème
 label.orthographicforms=Graphèmes
 label.orthographicformswithcolon=Graphemes:
 label.parserresult=Résultat d\u2019analyse 
+label.parsertree=Diagramme d'arbre
 label.predictedsyllabification=Ruptures syllabiques prédites
 label.restoreproject=Restaurer projet
 label.results=Résultats:
