First pass at UI for adding templates and filters to ONC approach

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -116,6 +116,8 @@ onc.view.sonorityhierarchy.up=Mover Arriba
 onc.view.sonorityhierarchy.down=Mover Abajo
 onc.view.syllabificationparameters=Parámetros de silabeo
 onc.view.onsetprinciple=Onset Principle
+onc.view.templates=Plantillas del ONC
+onc.view.filters=Filtors del ONC
 onc.view.words=Palabras del ONC
 onc.view.wordspredictedvscorrect=Predicted vs Correct Son. Hier. Words
 onc.view.graphemenaturalclasses=Classes Naturales de Grafemas
