--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -116,6 +116,8 @@ onc.view.sonorityhierarchy.up=Avancer
 onc.view.sonorityhierarchy.down=Rétrograder
 onc.view.syllabificationparameters=Syllabification Parameters
 onc.view.onsetprinciple=Onset Principle
+onc.view.templates=ONC Templates
+onc.view.filters=ONC Filters
 onc.view.words=Mots ONC
 onc.view.wordspredictedvscorrect=Mots ONC prédits versus corrects
 onc.view.graphemenaturalclasses=Graphème classes naturelles
