Second pass at UI for Templates and Filters

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -180,6 +180,8 @@ label.environmentrepresentation=Entorno
 label.environments=Entornos
 label.exporting=Exporting: 
 label.exportingcanceled=Es: Exporting canceled!
+label.filterrepresentation=Ranuras
+label.filters=Filtros
 label.syllabifying=Silabificar: 
 label.parserresult=Resultado del analizador
 label.parsertree=Diagrama de árbol
@@ -219,6 +221,8 @@ label.pleasewaitcomparer=Este proceso puede tardar unos segundos o varios minuto
 label.pleasewaittaw=Este proceso puede tardar unos segundos.
 label.close=Cerrar
 label.results=Resultados
+label.templaterepresentation=Ranuras
+label.templates=Plantillas
 label.tryaword=Prueba una palabra
 label.tryit=Intentalo
 label.wordtotry=Palabra para intentar: 
