--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -153,6 +153,8 @@ label.environmentrepresentation=Environnent
 label.environments=Environnements
 label.exporting=Exportation en cours: 
 label.exportingcanceled=Exportation annulée!
+label.filterrepresentation=Slots
+label.filters=Filters
 label.filename=Nom de Fichier
 label.help=Aide
 label.hyphenationparameters=Paramètres d\u2019usage de traits d\u2019union pour {0}
@@ -200,6 +202,8 @@ label.oncsyllabificationfailure=Failure: could not parse segments into syllables
 label.success=Succès
 label.syllabifying=Syllabisant: 
 label.syllablepatterns=Modèles de syllabes
+label.templaterepresentation=Slots
+label.templates=Templates
 label.tryaword=Essayer un mot
 label.tryit=Essayer
 label.untested=Pas vérifié
