Another UI pass on templates/filters Include combo box

--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -137,6 +137,7 @@ label.choosenc=Choose one or more natural classes
 label.choosepredicted=Choose which predicted syllabifications to convert to correct syllabification
 label.choosesegments=Choose one or more segments
 label.choosesnc=Choose one or more segments and/or natural classes
+label.choosetype=Choose type
 label.close=Close
 label.correctsyllabification=Correct Syllable Breaks
 label.cvnaturalclassfailure=Failure: could not parse into natural classes; did find classes '{0}' covering graphemes '{1}'.
@@ -156,6 +157,7 @@ label.exportingcanceled=Exporting canceled!
 label.filename=File Name
 label.filterrepresentation=Slots
 label.filters=Filters
+label.filtertype=Type
 label.help=Help
 label.hyphenationparameters=Hyphenation parameters for {0}
 label.hyphenationparametersindesign=InDesign (simple list)
@@ -204,6 +206,7 @@ label.syllabifying=Syllabifying:
 label.syllablepatterns=Syllable Patterns
 label.templaterepresentation=Slots
 label.templates=Templates
+label.templatetype=Type
 label.tryaword=Try a Word
 label.tryit=Try it
 label.untested=Untested
@@ -403,3 +406,12 @@ environmentsyntaxerror.too_many_word_initial_boundaries=There are too many word 
 environmentsyntaxerror.unknown=Unknown error in environment; detected at or about position {0}.
 environmentsyntaxerror.unknowngrapheme=Unrecognized grapheme beginning at '{0}' in environment.
 environmentsyntaxerror.unknowngraphemenaturalclass=Unrecognized grapheme natural class '{0}' in environment.
+
+#Template/Filter types
+templatefilter.type.coda=Coda
+templatefilter.type.nucleus=Nucleus
+templatefilter.type.onset=Onset
+templatefilter.type.rime=Rime
+templatefilter.type.syllable=Syllable
+templatefilter.type.wordfinal=Word final
+templatefilter.type.wordinitial=Word initial
