--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -160,6 +160,7 @@ label.choosebackup=Seleccionar un archivo de respalda para restaurar:
 label.chooseclass=Seleccionar clase
 label.choosegnc=Seleccionar uno o más grafemas y/o clases naturales de grafemas
 label.choosenc=Seleccionar uno o más clases naturales
+label.choosetype=Seleccionar un tipo
 label.filename=Nombre del archivo
 label.choosesegmnts=Seleccionar uno o más segmentos
 label.choosesnc=Seleccionar uno o más segmentos y/o clases naturales
@@ -182,6 +183,7 @@ label.exporting=Exporting:
 label.exportingcanceled=Es: Exporting canceled!
 label.filterrepresentation=Ranuras
 label.filters=Filtros
+label.filtertype=Tipo
 label.syllabifying=Silabificar: 
 label.parserresult=Resultado del analizador
 label.parsertree=Diagrama de árbol
@@ -223,6 +225,7 @@ label.close=Cerrar
 label.results=Resultados
 label.templaterepresentation=Ranuras
 label.templates=Plantillas
+label.templatetype=Tipo
 label.tryaword=Prueba una palabra
 label.tryit=Intentalo
 label.wordtotry=Palabra para intentar: 
@@ -403,3 +406,12 @@ environmentsyntaxerror.too_many_word_initial_boundaries=Hay demasiados marcadore
 environmentsyntaxerror.unknown=Error desconocido en el entorno; detectado en o alrededor de la posición {0}.
 environmentsyntaxerror.unknowngrapheme=Grafema no reconocido comenzando en '{0}' en el entorno.
 environmentsyntaxerror.unknowngraphemenaturalclass=Clase natural de grafemas no reconocida '{0}' en el entorno.
+
+#Template/Filter types
+templatefilter.type.coda=Coda
+templatefilter.type.nucleus=Nucleus
+templatefilter.type.onset=Onset
+templatefilter.type.rime=Rime
+templatefilter.type.syllable=Sílaba
+templatefilter.type.wordfinal=Palabra final
+templatefilter.type.wordinitial=Palabra inicial
