--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -137,6 +137,7 @@ label.choosenc=Choisir une classe naturelle ou plusieurs
 label.choosepredicted=Choisir quelles syllabifications prédites à convertir en syllabification correcte
 label.choosesegments=Choisir un segment ou plusieurs
 label.choosesnc=Choisir un segment et/ou classe naturelle ou plusieurs
+label.choosetype=Choose type
 label.close=Fermer
 label.correctsyllabification=Corriger ruptures syllabiques
 label.cvnaturalclassfailure=Echec: impossible d\u2019analyser en classes naturelles; classes non trouvées '{0}' pour graphèmes '{1}'.
@@ -155,6 +156,7 @@ label.exporting=Exportation en cours:
 label.exportingcanceled=Exportation annulée!
 label.filterrepresentation=Slots
 label.filters=Filters
+label.filtertype=Type
 label.filename=Nom de Fichier
 label.help=Aide
 label.hyphenationparameters=Paramètres d\u2019usage de traits d\u2019union pour {0}
@@ -204,6 +206,7 @@ label.syllabifying=Syllabisant:
 label.syllablepatterns=Modèles de syllabes
 label.templaterepresentation=Slots
 label.templates=Templates
+label.templatetype=Type
 label.tryaword=Essayer un mot
 label.tryit=Essayer
 label.untested=Pas vérifié
@@ -406,3 +409,12 @@ environmentsyntaxerror.too_many_word_initial_boundaries=Il y a trop de marqueurs
 environmentsyntaxerror.unknown=Erreur inconnu en environnement; détecté à ou vers la position {0}.
 environmentsyntaxerror.unknowngrapheme=Graphème non reconnu commence à '{0}' en environnement.
 environmentsyntaxerror.unknowngraphemenaturalclass=Graphème classe naturelle non reconnu '{0}' en environnement.
+
+#Template/Filter types
+templatefilter.type.coda=Coda
+templatefilter.type.nucleus=Nucleus
+templatefilter.type.onset=Onset
+templatefilter.type.rime=Rime
+templatefilter.type.syllable=Syllable
+templatefilter.type.wordfinal=Word final
+templatefilter.type.wordinitial=Word initial
