Add templates and filters to UI

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -415,3 +415,14 @@ templatefilter.type.rime=Rime
 templatefilter.type.syllable=Sílaba
 templatefilter.type.wordfinal=Palabra final
 templatefilter.type.wordinitial=Palabra inicial
+
+#Template/Filter messages
+templatefiltersyntaxerror.missing_class_after_opening_square_bracket=Falta una clase; detectado en o alrededor de la posición {0}.
+templatefiltersyntaxerror.missing_class_or_segment=Una clase o un segmento falta; detectado en o alrededor de la posición {0}.
+templatefiltersyntaxerror.missing_closing_paren=Falta un paréntesis de cierre; detectado en o alrededor de la posición {0}.
+templatefiltersyntaxerror.missing_closing_square_bracket=Falta un corchete de cierre; detectado en o alrededor de la posición {0}.
+templatefiltersyntaxerror.missing_opening_paren=Falta un paréntesis de apertura; detectado en o alrededor de la posición {0}.
+templatefiltersyntaxerror.missing_opening_square_bracket=Falta un corchete de apertura; detectado en o alrededor de la posición {0}.
+templatefiltersyntaxerror.unknown=Error desconocido en la descripción de plantilla o filtro; detectado en o sobre la posición {0}.
+templatefiltersyntaxerror.unknownsegment=Segmento no reconocido que comienza en '{0}' en la descripción de la plantilla o del filtro.
+templatefiltersyntaxerror.unknownnaturalclass=Clase natural no reconocida '{0}' en la descripción de la plantilla o del filtro.
