Add repair strategy to filters, pass 1

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -124,6 +124,7 @@ onc.view.graphemenaturalclasses=Classes Naturales de Grafemas
 onc.view.environments=Entornos
 
 #labels
+label.action=Acción
 label.backupproject=Respaldar este proyecto
 label.segmentinventory=Inventorio de segmentos
 label.segment=Segmento
@@ -181,9 +182,10 @@ label.environmentrepresentation=Entorno
 label.environments=Entornos
 label.exporting=Exporting: 
 label.exportingcanceled=Es: Exporting canceled!
+label.filterrepairstartpositiPosición de inicio de reparación
 label.filterrepresentation=Ranuras
 label.filters=Filtros
-label.filtertype=Tipo
+label.filtertype=Alcance
 label.syllabifying=Silabificar: 
 label.parserresult=Resultado del analizador
 label.parsertree=Diagrama de árbol
@@ -315,6 +317,8 @@ radio.choosebackup=Elija una copia de seguridad
 radio.allbutfirst=All but the first syllable must have an onset
 radio.everysyllable=Every syllable must have an onset
 radio.onsetsnotrequired=Onsets are not required
+radio.repairaction=Reparar
+radio.failaction=Fallar
 
 # Differences reports
 report.cvtitle=Comparación del CV Approach
