--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -124,6 +124,7 @@ onc.view.graphemenaturalclasses=Graphème classes naturelles
 onc.view.environments=Environnements
 
 # labels
+label.action=Action
 label.active=Actif
 label.backupcomment=Entrez une description pour cette sauvegarde: 
 label.backupdirectory=Répertoire des sauvegardes: 
@@ -154,9 +155,10 @@ label.environmentrepresentation=Environnent
 label.environments=Environnements
 label.exporting=Exportation en cours: 
 label.exportingcanceled=Exportation annulée!
+label.filterrepairstartposition=Repair start position
 label.filterrepresentation=Slots
 label.filters=Filters
-label.filtertype=Type
+label.filtertype=Scope
 label.filename=Nom de Fichier
 label.help=Aide
 label.hyphenationparameters=Paramètres d\u2019usage de traits d\u2019union pour {0}
@@ -317,6 +319,8 @@ radio.choosebackup=Choisir une sauvegarde
 radio.allbutfirst=All but the first syllable must have an onset
 radio.everysyllable=Every syllable must have an onset
 radio.onsetsnotrequired=Onsets are not required
+radio.repairaction=Repair
+radio.failaction=Fail
 
 # Differences reports
 report.cvtitle=Comparaison d\u2019approche CV
