--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -421,12 +421,15 @@ templatefilter.type.wordfinal=Palabra final
 templatefilter.type.wordinitial=Palabra inicial
 
 #Template/Filter messages
+templatefiltersyntaxerror.all_slots_optional=Todas las máquinas tragamonedas son opcionales; Necesita al menos un espacio obligatorio.
+templatefiltersyntaxerror.extra_slot_position_indicator=Solo un indicador de posición de ranura | esta permitido; por favor elimine cualquier extra.
 templatefiltersyntaxerror.missing_class_after_opening_square_bracket=Falta una clase; detectado en o alrededor de la posición {0}.
 templatefiltersyntaxerror.missing_class_or_segment=Una clase o un segmento falta; detectado en o alrededor de la posición {0}.
 templatefiltersyntaxerror.missing_closing_paren=Falta un paréntesis de cierre; detectado en o alrededor de la posición {0}.
 templatefiltersyntaxerror.missing_closing_square_bracket=Falta un corchete de cierre; detectado en o alrededor de la posición {0}.
 templatefiltersyntaxerror.missing_opening_paren=Falta un paréntesis de apertura; detectado en o alrededor de la posición {0}.
 templatefiltersyntaxerror.missing_opening_square_bracket=Falta un corchete de apertura; detectado en o alrededor de la posición {0}.
+templatefiltersyntaxerror.slot_position_needs_segment_or_class_after_it=El indicador de posición de la ranura | necesita ser seguido por un segmento o una clase.
 templatefiltersyntaxerror.unknown=Error desconocido en la descripción de plantilla o filtro; detectado en o sobre la posición {0}.
 templatefiltersyntaxerror.unknownsegment=Segmento no reconocido que comienza en '{0}' en la descripción de la plantilla o del filtro.
 templatefiltersyntaxerror.unknownnaturalclass=Clase natural no reconocida '{0}' en la descripción de la plantilla o del filtro.
