--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -424,12 +424,15 @@ templatefilter.type.wordfinal=Word final
 templatefilter.type.wordinitial=Word initial
 
 #Template/Filter messages
+templatefiltersyntaxerror.all_slots_optional=All the slots are optional; you need at least one obligatory slot.
+templatefiltersyntaxerror.extra_slot_position_indicator=Only one slot position indicator | is allowed; please remove any extras.
 templatefiltersyntaxerror.missing_class_after_opening_square_bracket=A class is missing; detected at or about position {0}.
 templatefiltersyntaxerror.missing_class_or_segment=A class or a segment is missing; detected at or about position {0}.
 templatefiltersyntaxerror.missing_closing_paren=A closing parenthesis is missing; detected at or about position {0}.
 templatefiltersyntaxerror.missing_closing_square_bracket=A closing square bracket is missing; detected at or about position {0}.
 templatefiltersyntaxerror.missing_opening_paren=An opening parenthesis is missing; detected at or about position {0}.
 templatefiltersyntaxerror.missing_opening_square_bracket=An opening square bracket is missing; detected at or about position {0}.
+templatefiltersyntaxerror.slot_position_needs_segment_or_class_after_it=The slot position indicator | needs to be followed by a segment or a class.
 templatefiltersyntaxerror.unknown=Unknown error in template or filter description; detected at or about position {0}.
 templatefiltersyntaxerror.unknownsegment=Unrecognized segment beginning at '{0}' in template or filter description.
 templatefiltersyntaxerror.unknownnaturalclass=Unrecognized natural class '{0}' in template or filter description.
